logs/dag_id=dag_sql/run_id=scheduled__2023-03-08T173000+0000/task_id=criar_tabela_db/attempt=2.log
[2023-03-08T19:08:10.562+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_sql.criar_tabela_db scheduled__2023-03-08T17:30:00+00:00 [queued]>
[2023-03-08T19:08:10.573+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_sql.criar_tabela_db scheduled__2023-03-08T17:30:00+00:00 [queued]>
[2023-03-08T19:08:10.574+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T19:08:10.575+0000] {taskinstance.py:1280} INFO - Starting attempt 2 of 2
[2023-03-08T19:08:10.576+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T19:08:10.591+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): criar_tabela_db> on 2023-03-08 17:30:00+00:00
[2023-03-08T19:08:10.595+0000] {standard_task_runner.py:55} INFO - Started process 5450 to run task
[2023-03-08T19:08:10.598+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_sql', 'criar_tabela_db', 'scheduled__2023-03-08T17:30:00+00:00', '--job-id', '82', '--raw', '--subdir', 'DAGS_FOLDER/dag_sql.py', '--cfg-path', '/tmp/tmpgmrtfsvj']
[2023-03-08T19:08:10.599+0000] {standard_task_runner.py:83} INFO - Job 82: Subtask criar_tabela_db
[2023-03-08T19:08:10.675+0000] {task_command.py:388} INFO - Running <TaskInstance: dag_sql.criar_tabela_db scheduled__2023-03-08T17:30:00+00:00 [running]> on host 214d78e4ce30
[2023-03-08T19:08:10.802+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_sql
AIRFLOW_CTX_TASK_ID=criar_tabela_db
AIRFLOW_CTX_EXECUTION_DATE=2023-03-08T17:30:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-03-08T17:30:00+00:00
[2023-03-08T19:08:10.804+0000] {sql.py:254} INFO - Executing: create table if not exists tb_cliente(
    id int generated by default identity,
    name varchar not null,
    dt date
)
[2023-03-08T19:08:10.816+0000] {base.py:73} INFO - Using connection ID 'postgres-***' for task execution.
[2023-03-08T19:08:11.108+0000] {base.py:73} INFO - Using connection ID 'postgres-***' for task execution.
[2023-03-08T19:08:11.188+0000] {sql.py:375} INFO - Running statement: create table if not exists tb_cliente(
    id int generated by default identity,
    name varchar not null,
    dt date
), parameters: None
[2023-03-08T19:08:11.246+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "identity"
LINE 2:     id int generated by default identity,
                                        ^

[2023-03-08T19:08:11.258+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=dag_sql, task_id=criar_tabela_db, execution_date=20230308T173000, start_date=20230308T190810, end_date=20230308T190811
[2023-03-08T19:08:11.274+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 82 for task criar_tabela_db (syntax error at or near "identity"
LINE 2:     id int generated by default identity,
                                        ^
; 5450)
[2023-03-08T19:08:11.312+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-03-08T19:08:11.350+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
